# esp32-environmental-monitoring

./: CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/thingsboard/: CMakeLists.txt  Kconfig  idf_component.yml
components/thingsboard/include/thingsboard/: thingsboard.h
components/thingsboard/src/: connection.c  gateway_telemetry.c  ota.c
components/thingsboard/src/http/: http.c  http.h
components/wmesh/: CMakeLists.txt  Kconfig  idf_component.yml
components/wmesh/include/wmesh/: common.h  encryption.h  peer.h  storage.h  wmesh.h
components/wmesh/src/: encryption.c  peer.c  storage.c  wmesh.c
fs/web/: index.htm  script.js  styles.css
main/: CMakeLists.txt  Kconfig  Kconfig.sensor_pins  idf_component.yml  project.c
main/config/: persistence.c  persistence.h  provisioning.c  provisioning.h
main/nodes/: common.c  common.h  gateway.c  gateway.h  node.c  node.h
main/ota/: http.c  ota.c  ota.h
main/sensors/: i2c.S  sensors.c  sensors.h  spi.S  ulp.S  ulp.c  ulp.h
main/services/: gateway.c  gateway.h  ota.c  ota.h  telemetry.c  telemetry.h
main/time/: clock.c  clock.h
main/webserver/: request.c  request.h  webserver.c  webserver.h
main/webserver/fs/: file.c  file.h  persistence.c  persistence.h
main/wifi/: config.c  scan.c  sta_connect.c  wifi.h
scripts/: gen_kconfig_sensor_pins.py  pyproject.toml
